--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -658,6 +658,7 @@ pre code {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
+  margin-bottom: 20px;
 }
 
 .col {
@@ -11282,6 +11283,13 @@ p {
   .service-card {
     margin-bottom: 30px;
   }
+  .portfolio-card .portfolio-card-overlay {
+  opacity: 1;
+  visibility: visible;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+}
 }
 
 /* Pricing card */
