--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,13 @@ body {
   background: #4b3f73; /* color of the scrollbar on hover */
 }
 
+.logotxt {
+  font-family: 'Baloo Paaji';
+  font-weight: 100;
+  color: #212529;
+  margin: auto;
+  font-size: 1rem;
+}
 
 [tabindex="-1"]:focus {
   outline: 0 !important;
